--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lucide-react": "^0.536.0",
     "next": "^14.2.31",
     "next-themes": "^0.4.6",
+    "puppeteer": "^24.16.2",
     "react": "^18",
     "react-day-picker": "^9.8.1",
     "react-dom": "^18",
