--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "next-themes": "^0.4.6",
     "puppeteer": "^24.16.2",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-day-picker": "^9.8.1",
     "react-dom": "^18",
     "react-hook-form": "^7.62.0",
